--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -25,7 +25,7 @@
                             <div class="mini-stat clearfix bg-purple bx-shadow">
                                 <span class="mini-stat-icon"><i class="fa fa-comments-o" aria-hidden="true"></i></span>
                                 <div class="mini-stat-info text-right">
-                                    收到了<span class="counter" th:text="${statistics.comments}"></span>条留言
+                                    收到了<span class="counter" th:text="${comments2.size}"></span>条留言
                                 </div>
                             </div>
                         </div>
