--- a/src/main/resources/templates/admin/page_edit.html
+++ b/src/main/resources/templates/admin/page_edit.html
@@ -33,7 +33,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="请输入页面访问名" name="slug" required=""
+                                <input type="text" class="form-control" placeholder="请输入页面访问名(不能是纯数字)" name="slug" required=""
                                        aria-required="true" th:value="${contents!=null and contents.slug !=null}?${contents.slug}: ''"/>
                             </div>
 
