--- a/src/main/resources/templates/themes/default/footer.html
+++ b/src/main/resources/templates/themes/default/footer.html
@@ -35,15 +35,15 @@
             <div class="meta-item meta-copyright">
                 <div class="meta-copyright-info">
                     <div class="info-text">
-                        <a href="http://www.54tianzhisheng.cn" target="_blank" style="display: block;margin: 0 auto;" class="info-logo">
+                        <a href="http://www.baidu.cn" target="_blank" style="display: block;margin: 0 auto;" class="info-logo">
                             <img style="display: block;margin: 0 auto;" th:src="@{/user/img/logo.png}" th:alt="${commons.site_title()}"/>
                         </a>
                         <br/>
-                        <p>&copy; 版权所有 <a href="https://github.com/zhisheng17/blog" target="_blank"
-                                         rel="nofollow">My Blog</a> 保留一切权利
+                        <p>&copy; 版权所有 <a href="https://github.com/yuanjie00a/my-blog" target="_blank"
+                                         rel="nofollow">My-Blog</a> 保留一切权利
                         </p>
                         <br/>
-                        <p>赣ICP备16004176号</p>
+                        <p>XXXXXXXXXXX号</p>
                     </div>
                 </div>
             </div>
