--- a/src/main/resources/templates/themes/default/links.html
+++ b/src/main/resources/templates/themes/default/links.html
@@ -14,16 +14,15 @@
         <blockquote>
             <ul>
                 <li><p>请确定贵站可以稳定运营</p></li>
-                <li><p>原创博客优先，技术类博客优先，设计、视觉类博客优先</p></li>
+                <li><p>原创博客优先，最要是后端技术分享的</p></li>
                 <li><p>经常过来访问和评论，眼熟的</p></li>
             </ul>
         </blockquote>
         <h3>基本信息</h3>
         <pre><code class="lang-md hljs markdown">
-            网站名称：猿 Blog( zhisheng 的技术分享)
-            网站地址：http://www.54tianzhisheng.cn</code></pre>
+            网站地址：www.baidu.com</code></pre>
 
-        <p>我的邮箱:zhisheng2018@gmail.com</p>
+        <p>我的邮箱:1459217624@qq.com</p>
         <p>暂时先这样，同时欢迎互换友链 ^_^</p>
         <p>还有，我会不定时对无法访问的网址进行清理，请保证自己的链接长期有效</p></div>
 </article>
